import React from 'react';
import { shallow } from 'enzyme';
import { ExpensesSummary } from '../../components/ExpensesSummary';

test('should display an expense and its total', () => {
  const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={235} />);
  expect(wrapper).toMatchSnapshot();
});

test('should display multiple expenses and their total', () => {
  const wrapper = shallow(<ExpensesSummary expenseCount={23} expensesTotal={235897987} />);
  expect(wrapper).toMatchSnapshot();
});