// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display an expense and its total 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h2>
</div>
`;

exports[`should display multiple expenses and their total 1`] = `
<div>
  <h2>
    Viewing 
    23
     
    expenses
     totalling 
    $2,358,979.87
  </h2>
</div>
`;
